--- a/_posts/2017-07-12-projects.md
+++ b/_posts/2017-07-12-projects.md
@@ -3,8 +3,8 @@ layout: post
 title: "Projects"
 date: 2017-07-12
 ---
-
-#Projects
+![Projects](/iosd-events/assets/projects.png)
+# Projects
 Members contribute to projects under mentors to
 gain practical knowledge and experience in the
 development domain.
