--- a/_posts/2017-07-12-sigs.md
+++ b/_posts/2017-07-12-sigs.md
@@ -3,8 +3,9 @@ layout: post
 title: "SIG's"
 date: 2017-07-12
 ---
+![SIG's](/iosd-events/assets/sigs.JPG)
 
-#SIG's
+# SIG's
 Second and third year members take workshops and
 special classes for the juniors teaching them technical
 skills like coding in various languages, web development
