--- a/_posts/2017-07-12-projects.md
+++ b/_posts/2017-07-12-projects.md
@@ -2,8 +2,12 @@
 layout: post
 title: "Projects"
 date: 2017-07-12
+img: projects.png
+excerpt: Members contribute to projects under mentors to
+         gain practical knowledge and experience in the
+         development domain...
 ---
-![Projects](/iosd-events/assets/projects.png)
+![Projects]({{site.baseurl}}/images/projects.png)
 # Projects
 Members contribute to projects under mentors to
 gain practical knowledge and experience in the
