--- a/_posts/2017-07-12-sigs.md
+++ b/_posts/2017-07-12-sigs.md
@@ -2,8 +2,13 @@
 layout: post
 title: "SIG's"
 date: 2017-07-12
+img: sigs.JPG
+excerpt: Second and third year members take workshops and
+         special classes for the juniors teaching them technical
+         skills like coding in various languages, web development
+         and android development all throughout the year...
 ---
-![SIG's](/iosd-events/assets/sigs.JPG)
+![SIG's]({{site.baseurl}}/images/sigs.JPG)
 
 # SIG's
 Second and third year members take workshops and
