Added More Content

--- a/_posts/2017-07-12-projects.md
+++ b/_posts/2017-07-12-projects.md
@@ -11,5 +11,6 @@ excerpt: Members contribute to projects under mentors to
 # Projects
 Members contribute to projects under mentors to
 gain practical knowledge and experience in the
-development domain.
+development domain. Various technical projects are undertaken all year round so that members can gain practical experience in different fields. The society has successfully completed 50+ projects in various domains like web application development. app development, etc. for public and private sector firms along with supporting various startups.
 
+We have also won accolades for completing projects for various organisations like Delhi Police- Aapka Update, PMO-TaskNetwork, HDFC and Indusland Bank- Synergy Go, Invest Unbiased-Financial services planning application,etc.
