--- a/_posts/2017-07-12-sigs.md
+++ b/_posts/2017-07-12-sigs.md
@@ -16,3 +16,4 @@ special classes for the juniors teaching them technical
 skills like coding in various languages, web development
 and android development all throughout the year.
 
+We believe developing these skills is as important as classroom learning. The months of August and September are solely devoted to SIG's so that all basics are covered and members can start working on projects henceforth. 
